--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,109 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div
+        id="9"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">9am</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="10"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">10am</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="11"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">11am</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="12"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">12am</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="13"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">1pm</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="14"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">2pm</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="15"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">3pm</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+
+      <div
+        id="16"
+        class="timeBlock row flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">4pm</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
+      <div
+        id="17"
+        class="timeBlock row mb-5 flex justify-content-around mb-3 border border-primary"
+      >
+        <div class="timeLabel col-2">5pm</div>
+        <textarea class="col-8"></textarea>
+        <div class="col-2">
+          <button class="btn btn-primary">Save</button>
+        </div>
+      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
