--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">9am</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -46,7 +46,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">10am</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -57,7 +57,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">11am</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -68,7 +68,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">12am</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -79,7 +79,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">1pm</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -90,7 +90,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">2pm</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -101,7 +101,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">3pm</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -112,7 +112,7 @@
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">4pm</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
@@ -122,7 +122,7 @@
         class="timeBlock row mb-5 flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">5pm</div>
-        <textarea class="col-8"></textarea>
+        <textarea class="dailyPlans col-8"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
