--- a/index.html
+++ b/index.html
@@ -31,98 +31,98 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div
-        id="9"
+        hourBlock="9"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">9am</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="9"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="10"
+        hourBlock="10"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">10am</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="10"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="11"
+        hourBlock="11"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">11am</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="11"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="12"
+        hourBlock="12"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">12am</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="12"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="13"
+        hourBlock="13"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">1pm</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="13"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="14"
+        hourBlock="14"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">2pm</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="14"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="15"
+        hourBlock="15"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">3pm</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="15"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
 
       <div
-        id="16"
+        hourBlock="16"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">4pm</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="16"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
       </div>
       <div
-        id="17"
+        hourBlock="17"
         class="timeBlock row mb-5 flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">5pm</div>
-        <textarea class="dailyPlans col-8"></textarea>
+        <textarea class="dailyPlans col-8" id="17"></textarea>
         <div class="col-2">
           <button class="btn btn-primary">Save</button>
         </div>
