--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here - from 9am-5pm in military time -->
       <div
         hourBlock="9"
         class="timeBlock row flex justify-content-around mb-3 border border-primary"
       >
         <div class="timeLabel col-2">9am</div>
         <textarea class="dailyPlans col-8" id="9"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -47,9 +46,8 @@
       >
         <div class="timeLabel col-2">10am</div>
         <textarea class="dailyPlans col-8" id="10"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -58,9 +56,8 @@
       >
         <div class="timeLabel col-2">11am</div>
         <textarea class="dailyPlans col-8" id="11"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -69,9 +66,8 @@
       >
         <div class="timeLabel col-2">12am</div>
         <textarea class="dailyPlans col-8" id="12"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -80,9 +76,8 @@
       >
         <div class="timeLabel col-2">1pm</div>
         <textarea class="dailyPlans col-8" id="13"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -91,9 +86,8 @@
       >
         <div class="timeLabel col-2">2pm</div>
         <textarea class="dailyPlans col-8" id="14"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -102,9 +96,8 @@
       >
         <div class="timeLabel col-2">3pm</div>
         <textarea class="dailyPlans col-8" id="15"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
 
       <div
@@ -113,9 +106,8 @@
       >
         <div class="timeLabel col-2">4pm</div>
         <textarea class="dailyPlans col-8" id="16"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
       <div
         hourBlock="17"
@@ -123,9 +115,8 @@
       >
         <div class="timeLabel col-2">5pm</div>
         <textarea class="dailyPlans col-8" id="17"></textarea>
-        <div class="col-2">
-          <button class="btn btn-primary">Save</button>
-        </div>
+
+        <button class="col-2 btn btn-primary">Save</button>
       </div>
     </div>
 
